# lanhu-design-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run-stdio.sh  server.json
.github/workflows/: release.yml
docs/: MCP_ROUTER_GUIDE.md  manual-auth-smoke-test.md
docs/superpowers/plans/: 2026-07-09-lanhu-design-mcp.md  2026-07-18-managed-browser-auth.md  2026-07-19-blantian-release-identity.md  2026-07-19-macos-managed-auth-cleanup.md  2026-07-19-pypi-trusted-publishing.md
docs/superpowers/specs/: 2026-07-17-fine-grained-design-assets-design.md  2026-07-18-managed-browser-auth-design.md  2026-07-19-blantian-release-identity-design.md  2026-07-19-macos-managed-auth-cleanup-design.md  2026-07-19-pypi-trusted-publishing-design.md
prompt/: 2026-07-13-cagent-cookie-config-claude-code-summary.md
src/lanhu_design_mcp/: __init__.py  browser_cookies.py  cli.py  client.py  config.py  design_assets.py  design_ir.py  design_service.py  managed_auth.py  platform_units.py  prompts.py  server.py  url_parser.py
src/lanhu_design_mcp/auth/: __init__.py  browser.py  manager.py  models.py  profile.py  validator.py
src/lanhu_design_mcp/design/: __init__.py  assets.py  ir.py  service.py
tests/: test_cli.py  test_client.py  test_client_assets.py  test_config.py  test_design_assets.py  test_design_ir.py  test_design_service_assets.py  test_design_service_auth.py  test_managed_auth.py  test_platform_units.py  test_product_contract.py  test_release_workflow.py  test_server.py  test_server_auth.py  test_source_documentation.py  test_url_parser.py
tests/auth/: test_browser.py  test_manager.py  test_models.py  test_profile.py  test_validator.py
tests/contracts/: test_package_structure.py  test_product.py  test_source_documentation.py
tests/design/: test_assets.py  test_ir.py  test_service_assets.py  test_service_auth.py  test_units.py  test_url.py
tools/: get_cookies.py  setup_cookies.py  test_mcp_connection.py
